# jrfapp

./: README.md  makran_coordinates  pyproject.toml  setup.py  tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb
.ipynb_checkpoints/: readme-checkpoint.md  tutorial1-checkpoint.ipynb  tutorial4-checkpoint.ipynb
jrfapp_tutorials/: tut1.py  tut2.py  tut3.py  tut4.py  tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb
jrfapp_tutorials/.ipynb_checkpoints/: tutorial1-checkpoint.ipynb  tutorial2-checkpoint.ipynb  tutorial3-checkpoint.ipynb  tutorial4-checkpoint.ipynb
jrfapp_tutorials/dummy_folder/: rftn_output_3_5000000000000004_0_06593103892693485_R.sac  rftn_output_3_5000000000000004_0_06593103892693485_Z.sac  syn_fow_model_rftan.mod
jrfapp_tutorials/outforw/: rftn_output_3_5000000000000004_0_056679423558262866_R.sac  rftn_output_3_5000000000000004_0_056679423558262866_Z.sac  syn_fow_model_rftan.mod
src/jrfapp/: __init__.py  inv_pso_thickness.py  inverse_routine.py  main_classes.py  main_inv_all.py  rftan_classes.py  utils.py
src/jrfapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
