[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "jrfapp"
version = "0.0.61"
description = "Joint inversion of Receiver function and Apparant velocity"
readme = "README.md"
authors = [{ name = "Mohammad Veisi", email = "m.veisi9687@gmail.com" }]
license = { file = "LICENSE" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [ "numpy", "scipy", "obspy", "rf", "matplotlib"]
 
requires-python = ">=3.5"
[project.urls]
Homepage = "https://github.com/mveisi/jrfapp"
